# cognithor

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CHANNELS_GUIDE.md  CLAUDE.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DATABASE.md  DEVELOPER.md  Dockerfile  FAQ.md  FLUTTER_API_CONTRACT.md  IDENTITY.md  Makefile  NOTICE  PREREQUISITES.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.70.0.md  SECURITY.md  TROUBLESHOOTING.md  demo.py  docker-compose.prod.yml  docker-compose.yml  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  start_cognithor.bat  start_cognithor.sh  uninstall.bat
.ci/: arc_agi3_phase1_hard_baseline.json  arc_agi3_phase1_held_out_baseline.json  arc_agi3_phase1_train_baseline.json  arc_real_cascade_d1_evaluation.json  arc_real_cascade_d1_training.json  arc_real_phase1_evaluation.json  arc_real_phase1_training.json  arc_real_sprint10_evaluation.json  arc_real_sprint10_training.json  sprint5_hard_phase1.json  sprint5_hard_phase2.json  sprint6_track_a_symbolic.json  sprint7_track_a1_cascade.json  sprint8_hard_baseline.json
archive/: README.md
cognithor-vscode/: .vscodeignore  LICENSE  README.md  cognithor-vscode-0.1.0.vsix  esbuild.js  package-lock.json  package.json  tsconfig.json
cognithor_bench/: README.md  pyproject.toml
cognithor_bench/arc_agi3/: .gitignore  README.md  manifest.example.json  manifest.json
cognithor_bench/arc_agi3/baselines/: baseline_v0.78.json
cognithor_bench/arc_agi3/tasks/: 0001_rotate90.json  0002_rotate180.json  0003_rotate270.json  0004_mirror_horizontal.json  0005_mirror_vertical.json  0006_recolor_1_to_5.json  0007_recolor_2_to_8.json  0008_identity.json  0101_transpose.json  0102_recolor_3_to_7.json  0103_mirror_diagonal.json  0104_rotate90_then_recolor.json  0201_count_objects_to_color.json  0202_largest_object_only.json  0203_fill_enclosed_areas.json  0204_grid_to_diagonal.json  0205_repeat_pattern_to_size.json  0206_remove_singletons.json  0207_color_by_size.json  0208_horizontal_then_vertical.json
cognithor_bench/arc_agi3_real/: LICENSE  manifest.json
cognithor_bench/src/cognithor_bench/: __init__.py  cli.py  reporter.py  runner.py
cognithor_bench/src/cognithor_bench/adapters/: __init__.py  autogen_adapter.py  base.py  cognithor_adapter.py
cognithor_bench/src/cognithor_bench/scenarios/: __init__.py  smoke_test.jsonl
cognithor_bench/tests/: test_adapters_base.py  test_autogen_adapter.py  test_cli.py  test_cognithor_adapter.py  test_e2e_smoke.py  test_package_install.py  test_reporter.py  test_runner.py  test_smoke_scenarios.py
contrib/: README.md
deploy/: cognithor-logrotate.conf  cognithor-webui.service  cognithor.service  grafana-dashboard.json  install-server.sh
docs/: SYSTEM_ARCHITECTURE.md  cognithor_refactor_prompt.md  cognithor_retrieval_extensions_prompt.md  hashline-guard.md  index.html  vllm-manual-test.md  vllm-user-guide.md
examples/: api_client.py  websocket_client.py
examples/insurance-agent-pack/: LICENSE  README.md  pyproject.toml
examples/insurance-agent-pack/docs/: DISCLAIMER.md  architecture.md  demo_walkthrough.md
examples/insurance-agent-pack/src/insurance_agent_pack/: __init__.py  cli.py  crew.py
examples/insurance-agent-pack/src/insurance_agent_pack/agents/: __init__.py  compliance_gatekeeper.py  needs_assessor.py  policy_analyst.py  report_generator.py
examples/insurance-agent-pack/src/insurance_agent_pack/knowledge/: bav_basics.jsonl  bu_grundlagen.jsonl  ggf_versorgung.jsonl  pkv_grundlagen.jsonl
examples/insurance-agent-pack/src/insurance_agent_pack/prompts/: compliance_gatekeeper.md  needs_assessor.md  policy_analyst.md  report_generator.md
examples/insurance-agent-pack/src/insurance_agent_pack/tools/: __init__.py  pdf_extractor.py
examples/insurance-agent-pack/tests/: test_audit_chain_intact.py  test_cli.py  test_compliance_gatekeeper.py  test_gatekeeper_blocks_legal_advice.py  test_knowledge_seeds.py  test_local_inference_mode.py  test_needs_assessor.py  test_package_install.py  test_pdf_extractor.py  test_policy_analyst.py  test_report_generator.py  test_team.py
flutter_app/: pubspec.yaml
flutter_app/plugins/speech_to_text_windows_fix/windows/: CMakeLists.txt
installer/: agents.yaml.default  auto_upgrade.py  build_deb.py  build_installer.py  cognithor.iss  first_run.py
scripts/: bootstrap_windows.py  check_before_push.sh  first_boot.py  generate_integrations_catalog.py  health_check.py  (+13 more)
sdk/: pyproject.toml
sdk/src/cognithor_sdk/: __init__.py  interface.py  leads.py
(+2514 files in other folders)
