[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognithor-bench"
version = "0.1.0"
description = "Reproducible Multi-Agent benchmark scaffold for Cognithor"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Alexander Söllner" }]
keywords = ["ai", "agent", "benchmark", "cognithor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # cognithor.crew (used by CognithorAdapter) ships in 0.93.0+, so >=0.93.0
    # is the true minimum. Tighten to >=0.94.0 once v0.94.0 makes the [autogen]
    # extra available on PyPI for users running `cognithor-bench --adapter autogen`.
    "cognithor>=0.93.0",
    "anyio>=4.0,<5",
    "structlog>=25.4,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
]
# Mirrors the root cognithor[autogen] extra so cognithor_bench can pull
# autogen-agentchat AND autogen-ext for the optional AutoGenAdapter
# (autogen-ext provides OpenAIChatCompletionClient).
autogen = [
    "autogen-agentchat==0.7.5",
    "autogen-ext[openai]==0.7.5",
]

[project.scripts]
cognithor-bench = "cognithor_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cognithor_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "RUF012"]
