[project]
name = "cognithor-sdk"
version = "0.92.1"
description = "Type stubs and interfaces for building Cognithor agent packs"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alexander Soellner" }]
dependencies = ["pydantic>=2.0,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognithor_sdk"]
